FindBugs:  Fixing inefficient use of number constructor and removing dead stores
git-svn-id: http://dev.eclipse.org/svnroot/technology/org.eclipse.stem/trunk@955 92a21009-5b66-0410-b83a-dc787c41c6e9